cinnamon: fix jump effect on calendar days

--- a/Lightningbug-Dark/cinnamon/cinnamon.css
+++ b/Lightningbug-Dark/cinnamon/cinnamon.css
@@ -779,9 +779,6 @@ StScrollBar StButton#hhandle:active {
 }
 
 .calendar-day {
-  border-width: 2px;
-  border-style: solid;
-  border-color: transparent;
   color: #e3e3e3;
   border-radius: 999px;
 }
